Moved name of Chris Messenger in the MDC paper. Grant David Meadors, 02015-02-24 (JD 2457078)

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2670,7 +2670,7 @@ year = "2013-10-10"
 }
 
 @TECHREPORT{ScoX1MDC2014DCC,
-author = "Bulten, H.J and Crowder, S.G. and Dergachev, V. and Galloway, D. and Goetz, E. and Jonker, R.J.G. and Lasky, P.D. and Meadors, G.D. and Messenger, C. and Premachandra, S. and Riles, K. and Sammut, L. and Thrane, E.H.  and Whelan, J.T. and Zhang, Y.",
+author = "Messenger, C. and Bulten, H.J and Crowder, S.G. and Dergachev, V. and Galloway, D. and Goetz, E. and Jonker, R.J.G. and Lasky, P.D. and Meadors, G.D. and Premachandra, S. and Riles, K. and Sammut, L. and Thrane, E.H.  and Whelan, J.T. and Zhang, Y.",
 title = "Gravitational waves from Sco X-1: a comparison of search methods",
 institution = "LIGO",
 number = "P12XXXXX-x0",
