Adding refernce to DCC draft of the TwoSpect directed methods paper

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3083,3 +3083,11 @@ volume = "4",
 number = "4",
 year = "2001"
 }
+
+@ARTICLE{TwoSpectMDCMethods2015,
+    author = "Meadors, G.D. and Goetz, E. and Riles, K.",
+    title = "TwoSpect: search for a simulated Scorpius X-1",
+    journal = "LIGO DCC",
+    year = 2015,
+    volume = "P1500037"
+}
