Added most of MAP sources except Woan so far

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -590,8 +590,8 @@ year = "2004"
         title = "Coherent searches for periodic gravitational waves from unknown isolated sources and {S}corpius {X-1}: results from the second {LIGO} science run",
         journal = "Phys. Rev. D",
         volume = "76",
-        number = "8",
-        pages = "082001",
+        pages = "8",
+        number = "082001",
         year = "2007"
 }
 
@@ -790,10 +790,12 @@ year = "2008"
 
 @ARTICLE{LSCPowerFlux2009,
 author = "Abbott, B. and others",
+title = "All-Sky {LIGO} Search for Periodic Gravitational Waves in the Early Fifth-Science-Run Data",
 journal = "Phys. {R}ev. {L}ett",
 volume = "102",
 number = "111102",
 year = "2009"
+doi = {10.1103/PhysRevLett.102.111102} 
 }
 
 @ARTICLE{LSCEinsteinHome2009,
@@ -3090,4 +3092,44 @@ year = "2001"
     journal = "LIGO DCC",
     year = 2015,
     volume = "P1500037"
+}
+
+@ARTICLE{PowerFluxMethod2010,
+    author = "Dergachev, V.",
+    title = "On blind searches for noise dominated signals: a loosely coherent approach",
+    journal = "Classical and {Q}uantum {G}ravity",
+    year = 2010,
+    volume = "27",
+    number = "205017",
+    doi = {10.1088/0264-9381/27/20/205017}
+}
+
+@ARTICLE{PowerFluxAllSky2012,
+    author = "Abadie, J. and others",
+    title = "All-sky search for periodic gravitational waves in the full {S5} {LIGO} data",
+    journal = "Phys. {R}ev. {D}",
+    year = 2012,
+    volume = "85",
+    number = "022001",
+    doi = {10.1103/PhysRevD.85.022001}
+}
+
+@ARTICLE{HoughTransformKrishnan2004,
+    author = "Krishnan, Badri and Sintes, Alicia M. and Papa, Maria Alessandra and Schutz, Bernard F. and Frasca, Sergio and Palomba, Cristiano",
+    title = "Hough transform search for continuous gravitational waves",
+    journal = "Phys. {R}ev. {D}",
+    volume = "70",
+    number = "082001",
+    year = 2004,
+    doi = "10.1103/PhysRevD.70.082001"
+}
+
+@ARTICLE{DupuisTargetedSearches2006,
+    author = "Dupuis, R\'{e}jean {for the LIGO Scientific Collaboration}",
+    title = "Targeted searches for gravitational waves from radio pulsars",
+    journal = "J. {P}hys {C}onf. {S}eries",
+    volume = "32",
+    year = 2006,
+    pages = "52-57",
+    doi = {10.1088/1742-6596/32/1/009}
 }
