Bibliography edited fully

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3133,3 +3133,37 @@ year = "2001"
     pages = "52-57",
     doi = {10.1088/1742-6596/32/1/009}
 }
+
+@ARTICLE{JointRadioPulsarTransients2010,
+    authors = "Predoi, V. and Clark, J. and Daw, E. and Fairhurst, S. and Heng. I.S. and Kanner, J. and Regimbau, T. and Shawhan, P. and Siemens, X. and Sutton, P. and Vecchio, A. and White, D. and Woan, G."
+    title = "Prospects for joint radio telescope and gravitational-wave searches for astrophysical transients",
+    journal = "Classical and {Q}uantum {G}ravity",
+    year = "2010",
+    volume = "27",
+    number = "084018",
+    doi = {10.1088/0264-9381/27/8/084018}
+}
+
+@ARTICLE{ScoX1MDC2014arXiv,
+author = "Messenger, C. and Bulten, H.J and Crowder, S.G. and Dergachev, V. and Galloway, D. and Goetz, E. and Jonker, R.J.G. and Lasky, P.D. and Meadors, G.D. and Melatos, A. and Premachandra, S. and Riles, K. and Sammut, L. and Thrane, E.H.  and Whelan, J.T. and Zhang, Y.",
+title = "Gravitational waves from {Sco X-1}: a comparison of search methods and prospects for detection with advanced detectors",
+institution = "arXiv",
+number = "gr-qc/1504.05889",
+year = "2015"
+}
+
+@ARTICLE{ScoX1CrossCorr2015arXiv,
+author = "Whelan, J.T. and Sundaresan, S. and Zhang, Y. and Peiris, P.",
+title = "A model-based cross-correlation search for gravitational waves from {Scorpius X-1}",
+institution = "arXiv",
+number = "gr-qc/1504.05890",
+year = "2015"
+}
+
+@ARTICLE{LeaciPrixDirectedFStatDCC,
+author = "Leaci, P. and Prix, R.",
+title = "Directed searches for continuous gravitational waves from binary systems: parameter-space metrics and optimal {Scorpius X-1} sensitivity",
+institution = "arXiv",
+number = "1502.00914",
+year = "2015"
+}
