Added the coherent combination of SFTs reference

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3167,3 +3167,11 @@ institution = "arXiv",
 number = "1502.00914",
 year = "2015"
 }
+
+@ARTICLE{TwoSpectCoherentGoetz2015,
+    author = "Goetz, E. and Riles, K.",
+    title = "Coherently combining short data segments for all-sky semi-coherent continuous wave searches",
+    journal = "LIGO DCC",
+    year = 2015,
+    volume = "P1500038"
+}
