Fixed some missing commas

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -794,7 +794,7 @@ title = "All-Sky {LIGO} Search for Periodic Gravitational Waves in the Early Fif
 journal = "Phys. {R}ev. {L}ett",
 volume = "102",
 number = "111102",
-year = "2009"
+year = "2009",
 doi = {10.1103/PhysRevLett.102.111102} 
 }
 
@@ -2980,7 +2980,7 @@ title = "Implications of an r mode in {XTE J1751-305}: mass, radius and spin evo
 journal = "Mon. {N}ot. {R}. {A}str. {S}oc.",
 year = "2014",
 volume = "442",
-pages = "1786-1793"
+pages = "1786-1793",
 doi = {10.1093/mnras/stu870}
 }
 
@@ -2990,7 +2990,7 @@ title = "Excitation of a non-radial mode in a millisecond {X}-ray pulsar {XTE J1
 journal = "Mon. {N}ot. {R}. {A}str. {S}oc.",
 year = "2014",
 volume = "442",
-pages = "3037-3043"
+pages = "3037-3043",
 doi = {10.1093/mnras/stu1077}
 }
 
@@ -3135,7 +3135,7 @@ year = "2001"
 }
 
 @ARTICLE{JointRadioPulsarTransients2010,
-    authors = "Predoi, V. and Clark, J. and Daw, E. and Fairhurst, S. and Heng. I.S. and Kanner, J. and Regimbau, T. and Shawhan, P. and Siemens, X. and Sutton, P. and Vecchio, A. and White, D. and Woan, G."
+    authors = "Predoi, V. and Clark, J. and Daw, E. and Fairhurst, S. and Heng. I.S. and Kanner, J. and Regimbau, T. and Shawhan, P. and Siemens, X. and Sutton, P. and Vecchio, A. and White, D. and Woan, G.",
     title = "Prospects for joint radio telescope and gravitational-wave searches for astrophysical transients",
     journal = "Classical and {Q}uantum {G}ravity",
     year = "2010",
@@ -3182,6 +3182,6 @@ year = "2015"
     journal = "Living {R}ev. {R}elativity",
     year = 2013,
     volume = "16",
-    number = "9"
+    number = "9",
     doi = {10.12942/lrr-2013-0}
 }
