Added formal, final reference to the MDC

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3152,6 +3152,21 @@ number = "gr-qc/1504.05889",
 year = "2015"
 }
 
+@article{ScoX1MDC2015PRD,
+  title = {Gravitational waves from Scorpius X-1: A comparison of search methods and prospects for detection with advanced detectors},
+  author = {Messenger, C. and Bulten, H. J. and Crowder, S. G. and Dergachev, V. and Galloway, D. K. and Goetz, E. and Jonker, R. J. G. and Lasky, P. D. and Meadors, G. D. and Melatos, A. and Premachandra, S. and Riles, K. and Sammut, L. and Thrane, E. H. and Whelan, J. T. and Zhang, Y.},
+  journal = {Phys. Rev. D},
+  volume = {92},
+  issue = {2},
+  pages = {023006},
+  numpages = {35},
+  year = {2015},
+  month = {Jul},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.92.023006},
+  url = {http://link.aps.org/doi/10.1103/PhysRevD.92.023006}
+}
+
 @ARTICLE{ScoX1CrossCorr2015arXiv,
 author = "Whelan, J.T. and Sundaresan, S. and Zhang, Y. and Peiris, P.",
 title = "A model-based cross-correlation search for gravitational waves from {Scorpius X-1}",
