Added formal reference to the Sammut paper on Sideband

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3200,3 +3200,14 @@ year = "2015"
     number = "9",
     doi = {10.12942/lrr-2013-0}
 }
+
+@ARTICLE{Sammut2014PRD,
+author = "Sammut, L. and Messenger, C. and Melatos, A. and Owen, {B.J.}",
+title = "Implementation of the frequency-modulated sideband search method for gravitational waves from low mass X-ray binaries",
+journal = "{P}hysical {R}eview {D}",
+volume = "89",
+number = "043001",
+year = "2014",
+doi = "10.1103/PhysRevD.89.043001"
+}
+
