Minor changes to Sammut paper formatting

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3164,7 +3164,7 @@ year = "2015"
   month = {Jul},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevD.92.023006},
-  url = {http://link.aps.org/doi/10.1103/PhysRevD.92.023006}
+  %url = {http://link.aps.org/doi/10.1103/PhysRevD.92.023006}
 }
 
 @ARTICLE{ScoX1CrossCorr2015arXiv,
@@ -3204,9 +3204,9 @@ year = "2015"
 @ARTICLE{Sammut2014PRD,
 author = "Sammut, L. and Messenger, C. and Melatos, A. and Owen, {B.J.}",
 title = "Implementation of the frequency-modulated sideband search method for gravitational waves from low mass X-ray binaries",
-journal = "{P}hysical {R}eview {D}",
+journal = "{P}hys. {R}ev. {D}",
 volume = "89",
-number = "043001",
+pages = "043001",
 year = "2014",
 doi = "10.1103/PhysRevD.89.043001"
 }
