Adding many new sources

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3211,3 +3211,41 @@ year = "2014",
 doi = "10.1103/PhysRevD.89.043001"
 }
 
+@article{2002ApJ...568..273S,
+   author = {{Steeghs}, D. and {Casares}, J.},
+    title = "{The Mass Donor of Scorpius X-1 Revealed}",
+  journal = APJ,
+   eprint = {astro-ph/0107343},
+ keywords = {Accretion, Accretion Disks, Stars: Individual: Constellation Name: Scorpius X-1, X-Rays: Binaries},
+     year = 2002,
+    month = mar,
+   volume = 568,
+    pages = {273-278},
+      doi = {10.1086/339224},
+   adsurl = {http://adsabs.harvard.edu/abs/2002ApJ...568..273S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{Bradshaw1999,
+    author = "Bradshaw, C.F. and Fomalont, E.B. and Geldzahler, B.J.",
+    title = "High-resolution parallax measurements of {S}corpius {X-1}",
+    journal = {ApJ},
+    pages = "L121",
+    year = "1999",
+    month = feb,
+    volume = "512"
+}
+
+@ARTICLE{2mass06,
+   author = {{Skrutskie}, M.~F. and others},
+    title = "{The Two Micron All Sky Survey (2MASS)}",
+  journal = {The Astronomical Journal},
+ keywords = {Catalogs, Infrared: General, Surveys},
+     year = 2006,
+    month = feb,
+   volume = 131,
+    pages = {1163-1183},
+      doi = {10.1086/498708},
+   adsurl = {http://adsabs.harvard.edu/abs/2006AJ....131.1163S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
