Added source for X-ray flux of Sco X-1, all going into paper

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3249,3 +3249,12 @@ doi = "10.1103/PhysRevD.89.043001"
    adsurl = {http://adsabs.harvard.edu/abs/2006AJ....131.1163S},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{Watts2008,
+    author = "Watts, A.L. and Krishnan, B. and Bildsten, L. and Schutz, B.F.",
+    title = "Detecting gravitational wave emission from the known accreting neutron stars",
+    year = 2008,
+    journal = {MNRAS},
+    volume = "389",
+    pages = "839"
+{
