Added reference to the Galactic Center search by Berit Behnke. GDM 02015-08-05 (JD 2457240)

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3257,4 +3257,13 @@ doi = "10.1103/PhysRevD.89.043001"
     journal = {MNRAS},
     volume = "389",
     pages = "839"
-{
+}
+
+@ARTICLE{BehnkeGalacticCenter2015,
+   author = "Behnke, B. and Papa, M.A. and Prix, R. ",
+   title = "Postprocessing methods used in the search for continuous gravitational-wave signals from the {G}alactic {C}enter",
+   journal = "{PRD}",
+   year = 2015,
+   volume = "91",
+   pages = "064007"
+}
