Edits after working on JTW comments for CQG directed methods paper

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -768,7 +768,7 @@ year = "1977"
 author = "Horowitz, C.J. and Kadau, K.",
 journal = "Phys. {R}ev. {L}ett.",
 volume = "102",
-number = "191102",
+pages = "191102",
 year = "2009"
 }
 
@@ -776,7 +776,7 @@ year = "2009"
 author = "Abbott, B. and others",
 journal = "Phys. {R}ev. {D}",
 volume = "76",
-number = "042001",
+pages = "042001",
 year = "2007"
 }
 
@@ -784,7 +784,7 @@ year = "2007"
 author = "Abbott, B.",
 journal = "Phys. {R}ev. {D}",
 volume = "77",
-number = "022001",
+pages = "022001",
 year = "2008"
 }
 
@@ -793,7 +793,7 @@ author = "Abbott, B. and others",
 title = "All-Sky {LIGO} Search for Periodic Gravitational Waves in the Early Fifth-Science-Run Data",
 journal = "Phys. {R}ev. {L}ett",
 volume = "102",
-number = "111102",
+pages = "111102",
 year = "2009",
 doi = {10.1103/PhysRevLett.102.111102} 
 }
@@ -802,7 +802,7 @@ doi = {10.1103/PhysRevLett.102.111102}
 author = "Abbott, B. and others",
 journal = "Phys. {R}ev. {D}",
 volume = "79",
-number = "022001",
+pages = "022001",
 year = "2009" 
 }
 
@@ -952,7 +952,7 @@ author = "Aasi, J. and others",
 title = "Gravitational-waves from known pulsars: results from the initial detector era",
 journal = "Astrophys. {J}",
 volume = "785",
-number = "119",
+pages = "119",
 year = "2014"
 }
 
@@ -961,7 +961,7 @@ author = "Aasi, J. and others",
 title = "Directed search for continuous gravitational waves from the {G}alactic center",
 journal = "Phys. {R}ev. {D}.",
 volume = "88",
-number = "102002",
+pages = "102002",
 year = "2013"
 }
 
@@ -970,7 +970,7 @@ author = "Meadors, Grant David and Kawabe, Keita and Riles, Keith",
 title = "Increasing {LIGO} sensitivity by feedforward subtraction of auxiliary length control noise",
 journal = "Classical and {Q}uantum {G}ravity",
 volume = "31",
-number = "105014",
+pages = "105014",
 year = "2014",
 doi = "{10.1088/0264-9381/31/10/105014}"
 }
@@ -979,7 +979,7 @@ doi = "{10.1088/0264-9381/31/10/105014}"
 author = "Aasi, J. and others",
 title = "Search for gravitational waves from binary black hole inspiral, merger and ringdown in {LIGO-V}irgo data from 2009-2010",
 journal = "Phys. {R}ev. {D}.",
-number = "022002",
+pages = "022002",
 volume = "87",
 year = "2013"
 }
@@ -988,7 +988,7 @@ year = "2013"
 author = "Abadie, J. and others",
 title = "Search for gravitational waves from low mass compact binary coalescence in {LIGO's} sixth science run and {Virgo's} science runs 2 and 3",
 journal = "Phys. {R}ev. {D}",
-number = "082002",
+pages = "082002",
 year = "2012",
 volume = "87"
 }
@@ -999,7 +999,7 @@ title = "Advanced {LIGO}: the next generation of gravitational wave detectors",
 journal = "Class. {Q}uant. {G}rav.",
 year = "2010",
 volume = "27",
-number = "084006"
+pages = "084006"
 }
 
 @ARTICLE{AbadiePRDStochastic2012,
@@ -1008,7 +1008,7 @@ title = "Upper limits on a stochastic gravitational-wave background using {LIGO}
 journal = "Phys. {R}ev. {D}",
 year = "2012",
 volume = "85",
-number = "122001"
+pages = "122001"
 }
 
 @ARTICLE{AasiGRB2013,
@@ -1017,7 +1017,7 @@ title = "Search for long-lived gravitational-wave transients coincident with lon
 journal = "Phys. {R}ev. {D}.",
 year = "2013",
 volume = "88",
-number = "122004"
+pages = "122004"
 }
 
 @ARTICLE{Hobbs2010,
@@ -1026,7 +1026,7 @@ title = "The {I}nternational {P}ulsar {T}iming {A}rray project: using pulsars as
 journal = "Class. {Q}uant. {G}rav.",
 year = "2010",
 volume = "27",
-number = "084013"
+pages = "084013"
 }
 
 @ARTICLE{Harry2006,
@@ -2387,7 +2387,7 @@ number = "804"
 author = "Riles, K.",
 journal = "Prog. in {P}article \& {N}ucl. {P}hys.",
 volume = "68",
-number = "1",
+pages = "1",
 year = "2013",
 title = "Gravitational waves: sources, detectors and searches"
 }
@@ -2516,6 +2516,16 @@ pages = "1030-1034",
 year = "2010"
 }
 
+@ARTICLE{AbadieCasA2010,
+author = "Abadie, J. and others",
+title = "First search for gravitational waves from the youngest known neutron star",
+journal = "ApJ",
+volume = "722",
+pages = "1504",
+number = "2",
+year = "2010"
+}
+
 @ARTICLE{AbadieCalibration2010,
 author = "Abadie, J. and others",
 title = "Calibration of the {LIGO} gravitational wave detectors in the fifth science run",
@@ -2558,7 +2568,7 @@ title = "An all-sky search algorithm for continuous gravitational waves from spi
 journal = "{C}lass. {Q}uant. {G}rav.",
 year = "2011",
 volume = "28",
-number = "215006"
+pages = "215006"
 }
 
 @ARTICLE{GoetzTwoSpectResults2014,
@@ -2566,16 +2576,16 @@ author = "Aasi, J. and others",
 title = "First all-sky search for continuous gravitational waves from unknown sources in binary systems",
 journal = "Phys. {R}ev. {D}",
 volume = "90",
-number = "062010",
+pages = "062010",
 year = "2014"
 }
 
 @ARTICLE{PapaloizouPringle1978,
 author = "Papaloizou, J. and Pringle, J.E.",
-journal = "M.{N}.{R}.{A}.{S}.",
+journal = "{MNRAS}",
 title = "Gravitational radiation and the stability of rotating stars",
 volume = "184",
-number = "501",
+pages = "501",
 year = "1978"
 }
 
@@ -2584,7 +2594,7 @@ author = "Wagoner, R.V.",
 journal = "{A}p. {J}.",
 title = "Gravitational radiation from accreting neutron stars",
 volume = "278",
-number = "345",
+pages = "345",
 year = "1984"
 }
 
@@ -2704,7 +2714,7 @@ title = "Quantum-mechanical noise in an interferometer",
 journal = "{P}hys. {R}ev. {D}",
 year = "1981",
 volume = "23",
-number = "8",
+issue = "8",
 pages = "1693"
 }
 
@@ -2713,7 +2723,7 @@ author = "Jaranowski, P. and Kr\'{o}lak, A. and Schutz, B.",
 title = "Data analysis of gravitational-wave signals from spinning neutron stars: the signal and its detection",
 journal = "Phys. {R}ev. {D}",
 year = "1998",
-number = "063001",
+pages = "063001",
 volume = "58"
 }
 
@@ -2722,7 +2732,7 @@ author = "Brady, P.R. and Creighton, T. and Cutler, C. and Schutz, B.F.",
 title = "Searching for periodic sources with {LIGO}",
 journal = "Phys. {R}ev. {D}",
 year = "1998",
-number = "4",
+issue = "4",
 volume = "57",
 pages = "2101"
 }
@@ -2778,7 +2788,7 @@ title = "Directional Limits on Persistent Gravitational Waves Using {LIGO S5} Sc
 journal = "Phys. {R}ev. {L}ett.",
 year = "2011",
 volume = "107",
-number = "271102"
+pages = "271102"
 }
 
 @ARTICLE{Owen1998,
@@ -2832,7 +2842,7 @@ title = "Gravitational-wave astronomy: observational results and their impact",
 journal = "Class. {Q}uant. {G}rav.",
 volume = "27",
 year = "2010",
-number = "084017"
+pages = "084017"
 }
 
 @ARTICLE{Ando2010,
@@ -2887,7 +2897,7 @@ title = "The {A}ustralia {T}elescope {N}ational {F}acility pulsar catalogue",
 journal = "Astronom. {J}.",
 year = "2005",
 volume = "129",
-number = "4"
+pages = "4"
 }
 
 @ARTICLE{Vitale2014,
@@ -2896,7 +2906,7 @@ title = "Space-borne gravitational wave observatories",
 journal = "Gen. {R}elativ. {G}ravit.",
 year = "2014",
 volume = "46",
-number = "1730"
+pages = "1730"
 }
 
 @ARTICLE{Markwardt2002,
@@ -2960,7 +2970,7 @@ title = "Gravitational radiation and rotation of accreting neutron stars",
 journal = "Astrophys. {J}. {L}ett.",
 year = "1998",
 volume = "501",
-number = "L89",
+pages = "L89",
 doi = {10.1086/311440}
 }
 
@@ -3008,8 +3018,18 @@ title = "Using generalized {PowerFlux} methods to estimate the parameters of per
 journal = "Class. {Q}uant. {G}rav.",
 year = "2008",
 volume = "25",
-number = "144044",
+pages = "144044",
 doi = {10.1088/0264-9381/25/11/114044}
+}
+
+@ARTICLE{WetteCasA2008,
+author = "Wette, K. and others",
+title = "Searching for gravitational waves from {C}assiopeia {A} with {LIGO}",
+journal = "Class. {Q}uant. {G}rav.",
+year = "2008",
+volume = "25",
+pages = "235011",
+doi = {10.1088/0264-9381/25/23/235011}
 }
 
 @ARTICLE{2010JPhCS.228a2005V,
@@ -3034,7 +3054,7 @@ title = "A fast search strategy for gravitational waves from low-mass x-ray bina
 journal = "{C}lassical and {Q}uantum {G}ravity",
 year = "2007",
 volume = "24",
-number = "S469",
+pages = "S469",
 doi = "10.1088/0264-9381/24/19/S10",
 }
 
@@ -3044,7 +3064,7 @@ title = {A radiometer for stochastic gravitational waves},
 journal = {Classical and Quantum Gravity},
 year = {2006},
 volume = {23},
-number = {S179},
+pages = {S179},
 doi = {10.1088/0264-9381/23/8/S23}
 }
 
@@ -3097,10 +3117,10 @@ year = "2001"
 @ARTICLE{PowerFluxMethod2010,
     author = "Dergachev, V.",
     title = "On blind searches for noise dominated signals: a loosely coherent approach",
-    journal = "Classical and {Q}uantum {G}ravity",
+    journal = "Class. {Q}uant. {G}rav.",
     year = 2010,
     volume = "27",
-    number = "205017",
+    pages = "205017",
     doi = {10.1088/0264-9381/27/20/205017}
 }
 
@@ -3110,7 +3130,7 @@ year = "2001"
     journal = "Phys. {R}ev. {D}",
     year = 2012,
     volume = "85",
-    number = "022001",
+    pages = "022001",
     doi = {10.1103/PhysRevD.85.022001}
 }
 
@@ -3119,19 +3139,29 @@ year = "2001"
     title = "Hough transform search for continuous gravitational waves",
     journal = "Phys. {R}ev. {D}",
     volume = "70",
-    number = "082001",
+    pages = "082001",
     year = 2004,
     doi = "10.1103/PhysRevD.70.082001"
 }
 
 @ARTICLE{DupuisTargetedSearches2006,
-    author = "Dupuis, R\'{e}jean {for the LIGO Scientific Collaboration}",
+    author = "Dupuis, R",
     title = "Targeted searches for gravitational waves from radio pulsars",
-    journal = "J. {P}hys {C}onf. {S}eries",
+    journal = "{(for the LIGO Scientific Collaboration)} J. {P}hys {C}onf. {S}eries",
     volume = "32",
     year = 2006,
     pages = "52-57",
     doi = {10.1088/1742-6596/32/1/009}
+}
+
+@ARTICLE{DupuisWoan2005,
+    author = "Dupuis, R.J. and Woan, G.",
+    title = "Bayesian estimation of pulsar parameters from gravitational wave data",
+    journal = "Phys. {R}ev. {D}",
+    volume = "72",
+    pages = "102002",
+    doi = {10.1103/PhysRevD.72.102002},
+    year = "2005"    
 }
 
 @ARTICLE{JointRadioPulsarTransients2010,
@@ -3175,12 +3205,54 @@ number = "gr-qc/1504.05890",
 year = "2015"
 }
 
+@ARTICLE{ScoX1CrossCorr2015PRD,
+  title = {Model-based cross-correlation search for gravitational waves from Scorpius X-1},
+  author = {Whelan, John T. and Sundaresan, Santosh and Zhang, Yuanhao and Peiris, Prabath},
+  journal = {Phys. Rev. D},
+  volume = {91},
+  issue = {10},
+  pages = {102005},
+  numpages = {27},
+  year = {2015},
+  month = {May},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.91.102005}
+}
+
+@ARTICLE{Dhurandhar2008,
+title = {Cross-correlation search for periodic gravitational waves},
+  author = {Dhurandhar, Sanjeev and Krishnan, Badri and Mukhopadhyay, Himan and Whelan, John T.},
+  journal = {Phys. Rev. D},
+  volume = {77},
+  issue = {8},
+  pages = {082001},
+  numpages = {16},
+  year = {2008},
+  month = {Apr},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.77.082001}
+}
+
 @ARTICLE{LeaciPrixDirectedFStatDCC,
 author = "Leaci, P. and Prix, R.",
 title = "Directed searches for continuous gravitational waves from binary systems: parameter-space metrics and optimal {Scorpius X-1} sensitivity",
 institution = "arXiv",
 number = "1502.00914",
 year = "2015"
+}
+
+@ARTICLE{LeaciPrixDirectedFStatPRD,
+ title = {Directed searches for continuous gravitational waves from binary systems: Parameter-space metrics and optimal Scorpius X-1 sensitivity},
+  author = {Leaci, Paola and Prix, Reinhard},
+  journal = {Phys. Rev. D},
+  volume = {91},
+  issue = {10},
+  pages = {102003},
+  numpages = {26},
+  year = {2015},
+  month = {May},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.91.102003}
 }
 
 @ARTICLE{TwoSpectCoherentGoetz2015,
@@ -3266,4 +3338,11 @@ doi = "10.1103/PhysRevD.89.043001"
    year = 2015,
    volume = "91",
    pages = "064007"
+}
+
+@misc{WhelanHcH0note2015,
+   author = "Whelan, John T.",
+   date = "2015-11-16",
+   year = "2015",
+   howpublished = "private communication"
 }
