Added the detection paper for GW150914. Grant David Meadors, 02016-02-18 (JD 2457437)

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3346,3 +3346,18 @@ doi = "10.1103/PhysRevD.89.043001"
    year = "2015",
    howpublished = "private communication"
 }
+
+@ARTICLE{GW150914LIGO,
+  author = "Abbott, B.P and others",
+  collaboration = {LIGO Scientific Collaboration and Virgo Collaboration},
+  journal = {Phys. Rev. Lett.},
+  volume = {116},
+  issue = {6},
+  pages = {061102},
+  numpages = {16},
+  year = {2016},
+  month = {Feb},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.116.061102},
+  #url = {http://link.aps.org/doi/10.1103/PhysRevLett.116.061102}
+}
