Adding arxiv version of Goetz & Riles 2015. Grant David Meadors, 02016-02-19 (JD 2457438)

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3263,6 +3263,15 @@ year = "2015"
     volume = "P1500038"
 }
 
+@ARTICLE{TwoSpectCoherentGoetz2015arxiv,
+    author = "Goetz, E. and Riles, K.",
+    title = "Coherently combining short data segments for all-sky semi-coherent continuous wave searches",
+    institution = "arXiv",
+    year = 2015,
+    eprint = {gr-qc/1510.06820}
+}
+
+
 @ARTICLE{YunesSiemens2013,
     author = "Yunes, N. and Siemens, X.",
     title = "Gravitational-wave tests of general relativity with ground-based detectors and pulsar-timing arrays",
