Planned articles for the coming year

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3114,6 +3114,31 @@ year = "2001"
     volume = "P1500037"
 }
 
+@ARTICLE{MeadorsDirectedMethods2016,
+    author = "Meadors, G.D. and Goetz, E. and Riles, K.",
+    title = "Tuning into Scorpius X-1: adapting a continuous gravitational-wave search for a known binary system",
+    journal ="Class. {Q}uant. {G}rav.",
+    year = 2016,
+    volume = "",
+    note = "In press"
+}
+
+@ARTICLE{MeadorsS6ScoX12016,
+    author = "Abbott, B. and others",
+    title = "Searches for continuous gravitational waves from Scorpius X-1 and XTE J1705-305",
+    journal = {PRD},
+    year = 2016,
+    note = "In prep"
+}
+
+@ARTICLE{MeadorsCrossCorrResampling2016,
+    author = "Meadors, G.D. and Krishnan, B. and Whelan, J.T. and Zhang, Y. and Papa, M.A.",
+    title = "Resampling cross-correlation searches for continuous gravitational waves from binary systems",
+    year = 2016
+    note "In prep"
+}
+
+
 @ARTICLE{PowerFluxMethod2010,
     author = "Dergachev, V.",
     title = "On blind searches for noise dominated signals: a loosely coherent approach",
