Added Patel reference

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3255,7 +3255,10 @@ title = {Cross-correlation search for periodic gravitational waves},
   year = {2008},
   month = {Apr},
   publisher = {American Physical Society},
-  doi = {10.1103/PhysRevD.77.082001}
+  doi = {10.1103/PhysRevD.77.082001},
+  eprint = "0712.1578",
+  archivePrefix = "arXiv",
+  SLACcitation  = "%%CITATION = 0712.1578;%%" 
 }
 
 @ARTICLE{LeaciPrixDirectedFStatDCC,
@@ -3395,3 +3398,19 @@ doi = "10.1103/PhysRevD.89.043001"
   doi = {10.1103/PhysRevLett.116.061102},
   #url = {http://link.aps.org/doi/10.1103/PhysRevLett.116.061102}
 }
+
+@article{Patel:2009qe,
+      author         = "Patel, Pinkesh and Siemens, Xavier and Dupuis, Rejean and
+                        Betzwieser, Joseph",
+      title          = "{Implementation of barycentric resampling for continuous
+                        wave searches in gravitational wave data}",
+      journal        = "{P}hys. {R}ev. {D}",
+      volume         = "81",
+      year           = "2010",
+      pages          = "084032",
+      doi            = "10.1103/PhysRevD.81.084032",
+      eprint         = "0912.4255",
+      archivePrefix  = "arXiv",
+      primaryClass   = "gr-qc",
+      SLACcitation   = "%%CITATION = ARXIV:0912.4255;%%"
+} 
