--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3231,9 +3231,9 @@ year = "2015"
 }
 
 @ARTICLE{ScoX1CrossCorr2015PRD,
-  title = {Model-based cross-correlation search for gravitational waves from Scorpius X-1},
-  author = {Whelan, John T. and Sundaresan, Santosh and Zhang, Yuanhao and Peiris, Prabath},
-  journal = {Phys. Rev. D},
+  title = "Model-based cross-correlation search for gravitational waves from Scorpius X-1",
+  author = "Whelan, John T. and Sundaresan, Santosh and Zhang, Yuanhao and Peiris, Prabath",
+  journal = "{P}hys. {R}ev. {D}",
   volume = {91},
   issue = {10},
   pages = {102005},
