Added reference for the CQG Directed Methods paper

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3119,8 +3119,9 @@ year = "2001"
     title = "Tuning into Scorpius X-1: adapting a continuous gravitational-wave search for a known binary system",
     journal ="Class. {Q}uant. {G}rav.",
     year = 2016,
-    volume = "",
-    note = "In press"
+    volume = "33",
+    number = "105017",
+    doi = "{10.1088/0264-9381/33/10/105017}"
 }
 
 @ARTICLE{MeadorsS6ScoX12016,
