Adding handle to R-mode references by Keith

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2845,6 +2845,13 @@ year = "2010",
 pages = "084017"
 }
 
+@ARTICLE{rmodes,
+N.~Andersson, \Journal{\APJ}{502}{708}{1998};\\
+L.~Bildsten, \Journal{\APJ}{501}{L89}{1998};\\
+J.L.~Friedman and S.M.~Morsink, \Journal{\APJ}{502}{714}{1998};\\
+B.J.~Owen \etal, \Journal{\PRD}{58}{084020}{1998}
+}
+
 @ARTICLE{Ando2010,
 author = "Ando, M.",
 title = "{DECIGO} and {DECIGO} pathfinder",
