--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,7 +1,9 @@
-% Bibliography by Grant David Meadors
-% meadorsg@reed.edu
-% gmeadors@umich.edu
-% gdmeadors@gmail.com
+@Comment{
+   {Bibliography by Grant David Meadors},
+   {meadorsg at reed.edu},
+   {gmeadors at umich.edu},
+   {gdmeadors at gmail.com}
+}
 
 @ARTICLE{feyn54,
    author = "R. P. Feynman",
@@ -2845,11 +2847,13 @@ year = "2010",
 pages = "084017"
 }
 
-@ARTICLE{rmodes,
-N.~Andersson, \Journal{\APJ}{502}{708}{1998};\\
-L.~Bildsten, \Journal{\APJ}{501}{L89}{1998};\\
-J.L.~Friedman and S.M.~Morsink, \Journal{\APJ}{502}{714}{1998};\\
-B.J.~Owen \etal, \Journal{\PRD}{58}{084020}{1998}
+@Comment{
+  ARTICLE{rmodes,
+  N.~Andersson, \Journal{\APJ}{502}{708}{1998};\\
+  L.~Bildsten, \Journal{\APJ}{501}{L89}{1998};\\
+  J.L.~Friedman and S.M.~Morsink, \Journal{\APJ}{502}{714}{1998};\\
+  B.J.~Owen \etal, \Journal{\PRD}{58}{084020}{1998}
+  }
 }
 
 @ARTICLE{Ando2010,
@@ -3142,8 +3146,8 @@ year = "2001"
 @ARTICLE{MeadorsCrossCorrResampling2016,
     author = "Meadors, G.D. and Krishnan, B. and Whelan, J.T. and Zhang, Y. and Papa, M.A.",
     title = "Resampling cross-correlation searches for continuous gravitational waves from binary systems",
-    year = 2016
-    note "In prep"
+    year = 2016,
+    note = "In prep"
 }
 
 
@@ -3226,8 +3230,10 @@ year = "2015"
   year = {2015},
   month = {Jul},
   publisher = {American Physical Society},
-  doi = {10.1103/PhysRevD.92.023006},
-  %url = {http://link.aps.org/doi/10.1103/PhysRevD.92.023006}
+  doi = {10.1103/PhysRevD.92.023006}
+}
+@Comment{
+  url = {http://link.aps.org/doi/10.1103/PhysRevD.92.023006}
 }
 
 @ARTICLE{ScoX1CrossCorr2015arXiv,
@@ -3404,7 +3410,7 @@ doi = "10.1103/PhysRevD.89.043001"
   month = {Feb},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevLett.116.061102},
-  #url = {http://link.aps.org/doi/10.1103/PhysRevLett.116.061102}
+  url = {http://link.aps.org/doi/10.1103/PhysRevLett.116.061102}
 }
 
 @article{Patel:2009qe,
