--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3131,7 +3131,8 @@ year = "2001"
     journal ="Class. {Q}uant. {G}rav.",
     year = 2016,
     volume = "33",
-    number = "105017",
+    number = "10",
+    pages = "105017",
     doi = "{10.1088/0264-9381/33/10/105017}"
 }
 
@@ -3307,10 +3308,22 @@ year = "2015"
 
 @ARTICLE{TwoSpectCoherentGoetz2015arxiv,
     author = "Goetz, E. and Riles, K.",
+    journal = "",
     title = "Coherently combining short data segments for all-sky semi-coherent continuous wave searches",
-    institution = "arXiv",
+    arxivPrefix = "arXiv",
     year = 2015,
     eprint = {gr-qc/1510.06820}
+}
+
+@ARTICLE{TwoSpectCoherentGoetz2015CQG,
+    author = "Goetz, E. and Riles, K.",
+    journal = "Class {Q}uant {G}rav",
+    title = "Coherently combining data between detectors for all-sky semi-coherent continuous gravitational wave searches",
+    doi = {10.1088/0264-9381/33/8/085007},
+    volume = "33",
+    number = "8",
+    pages = "085007",
+    year = "2016"
 }
 
 
