New entries on r-modes

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2856,6 +2856,24 @@ pages = "084017"
   }
 }
 
+@ARTICLE{Andersson1998,
+  author = "Andersson, N.",
+  journal = {APJ},
+  title = "A new class of unstable modes of rotating relativistic stars",
+  volume = "502",
+  number = "2",
+  pages = "708",
+  year = "1998"
+}
+@ARTICLE{Friedman1998,
+  author = "Friedman, J.L and Morsink, S.M.",
+  journal = {APJ},
+  title = "Axial instability of rotating relativistic stars",
+  volume = "502",
+  number = "714",
+  year = "1998"
+}
+
 @ARTICLE{Ando2010,
 author = "Ando, M.",
 title = "{DECIGO} and {DECIGO} pathfinder",
