Adding in-prep citation for spin-wandering

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3459,3 +3459,8 @@ doi = "10.1103/PhysRevD.89.043001"
       primaryClass   = "gr-qc",
       SLACcitation   = "%%CITATION = ARXIV:0912.4255;%%"
 } 
+
+@ARTICLE{MukherjeeSpinWandering2016,
+    author = "Mukherjee, A. and Messenger, C. and Riles, K.",
+    title = {in prep.}
+}
