Adding LIGO Open Science Center S6 release. Grant David Meadors, 2016-10-23 (JD 2457685)

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3464,3 +3464,13 @@ doi = "10.1103/PhysRevD.89.043001"
     author = "Mukherjee, A. and Messenger, C. and Riles, K.",
     title = {in prep.}
 }
+
+@misc{S6LOSC,
+    author = "LIGO Scientific Collaboration",
+    title =  "{LIGO} {O}pen {S}cience {C}enter release of {S6}",
+    year = "2015", 
+    doi = "10.7935/K5RN35SD", 
+    url = "\url{http://dx.doi.org/10.7935/K5RN35SD}",
+    note = "[DOI: 10.7935/K5RN35SD]"
+}
+
