Proper sideband Sammut citation

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3474,3 +3474,13 @@ doi = "10.1103/PhysRevD.89.043001"
     note = "[DOI: 10.7935/K5RN35SD]"
 }
 
+@ARTICLE{Sideband2015,
+    author = "Aasi, J. and others",
+    title = "Directed search for gravitational waves from {S}corpius {X-1} with initial {LIGO} data",
+    journal = "{P}hys. {R}ev. {D}",
+    volume = "91",
+    year = "2015",
+    pages = "062008",
+    doi = {10.1103/PhysRevD.91.062008},
+    url = {http://link.aps.org/doi/10.1103/PhysRevD.91.062008}
+}
