Private communication on a sin i

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3484,3 +3484,10 @@ doi = "10.1103/PhysRevD.89.043001"
     doi = {10.1103/PhysRevD.91.062008},
     url = {http://link.aps.org/doi/10.1103/PhysRevD.91.062008}
 }
+
+@misc{WangSteeghsGalloway2016,
+    author = "Wang, L. and Steeghs, D. and Galloway, D.",
+    year = 2016,
+    title = "Sco {X}-1 parameters summary",
+    howpublished = "private communication"
+}
