Cite the lattice paper about the 1/3 factor

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3491,3 +3491,15 @@ doi = "10.1103/PhysRevD.89.043001"
     title = "Sco {X}-1 parameters summary",
     howpublished = "private communication"
 }
+
+@ARTICLE{MessengerLattice2009,
+    author = "Messenger, C. and Prix, R. and Papa, M.A.",
+    title = "Random template banks and relaxed lattice coverings",
+    year = "2009",
+    journal = "{P}hys. {R}ev. {D}",
+    volume = "79",
+    pages = "104017",
+    doi = {10.1103/PhysRevD.79.104017}
+    arxivPrefix = "arXiv",
+    eprint = {gr-qc/0809.5223}
+}
