Adding Riggio2011 citation for the spindown of XTE J1751-305

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3503,3 +3503,13 @@ doi = "10.1103/PhysRevD.89.043001"
     arxivPrefix = "arXiv",
     eprint = {gr-qc/0809.5223}
 }
+
+@ARTICLE{Riggio2011,
+    author = "Riggio, A. and Burderi, L. and {Di Salvo}, T. and Papitto, A. and {D'Ai}, A. and Iaria, R. and Menna, M.T.",
+    title = "Secular spin-down of the {AMP} {XTE} {J1751}-{305}",
+    year = "2011",
+    journal = "A\&A",
+    doi = {10.1051/0004-6361/201014883},
+    volume = "531",
+    pages = "A140"
+}
