Cutler and Einstein at home citations on multi-detector F-statistic and consistency veto

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3513,3 +3513,21 @@ doi = "10.1103/PhysRevD.89.043001"
     volume = "531",
     pages = "A140"
 }
+
+@ARTICLE{CutlerMulti2005,
+    author = "Cutler, C. and Schutz, B.F.",
+    title = "Generalized {F}-statistic: {M}ultiple detectors and multiple gravitational wave pulsars",
+    journal = "{P}hys {R}ev {D}",
+    volume = "72",
+    pages = "063006",
+    year = "2005"
+}
+
+@ARTICLE{EinsteinHomeS52013,
+    author = "Aasi, J. and others",
+    title = "Einstein@Home all-sky search for periodic gravitational waves in {LIGO S5} data",
+    journal = "{P}hys {R}ev {D}",
+    volume = "87",
+    pages = "042001",
+    year = "2013"
+}
