Added citation to the S6 detector characterization paper

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3531,3 +3531,12 @@ doi = "10.1103/PhysRevD.89.043001"
     pages = "042001",
     year = "2013"
 }
+
+@ARTICLE{S6DetChar2015,
+    author = "Aasi, J. and others",
+    title = "Characterization of the {LIGO} detectors during their sixth science run",
+    journal = "{C}lass {Q}uant {G}rav",
+    volume = "32",
+    pages = "115012",
+    year = "2015"
+}
