The new 2017 searches are added to the bibliography

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3155,11 +3155,23 @@ year = "2001"
 }
 
 @ARTICLE{MeadorsS6ScoX12016,
-    author = "Abbott, B. and others",
-    title = "Searches for continuous gravitational waves from Scorpius X-1 and XTE J1705-305",
-    journal = {PRD},
+    author = "Meadors, G.D. and Goetz, E. and Riles, K. and Creighton, T. and Robinet, F.",
+    title = "Searches for continuous gravitational waves from {S}corpius {X-1} and {XTE} {J1705-305} in {LIGO}'s sixth science run",
+    institution = {arXiv},
     year = 2016,
-    note = "In prep"
+    number = "gr-qc/1610.09391"
+    note = ""
+}
+
+
+@ARTICLE{MeadorsS6ScoX1PRD2017,
+    author = "Meadors, G.D. and Goetz, E. and Riles, K. and Creighton, T. and Robinet, F.",
+    title = "Searches for continuous gravitational waves from {S}corpius {X-1} and {XTE} {J1705-305} in {LIGO}'s sixth science run",
+    journal = "{P}hys {R}ev {D}",
+    volume = "95",
+    pages = "042005",
+    year = "2017",
+    doi = "10.1103/PhysRevD.95.042005"
 }
 
 @ARTICLE{MeadorsCrossCorrResampling2016,
@@ -3254,6 +3266,29 @@ year = "2015"
 @Comment{
   url = {http://link.aps.org/doi/10.1103/PhysRevD.92.023006}
 }
+
+@ARTICLE{ScoX1CrossCorr2017arxivO1,
+  title = "Model-based cross-correlation search for gravitational waves from {S}corpius {X-1}",
+  author = "Abbott, B.P and others",
+  instituion = "arXiv",
+  number = "astro-ph.HE/1706:03119",
+  year = 2017
+}
+
+@ARTICLE{ScoX1CrossCorr2017ApJO1,
+  title = "Model-based cross-correlation search for gravitational waves from {S}corpius {X-1}",
+  author = "Abbott, B.P and others",
+  journal = "",
+  volume = {},
+  issue = {},
+  pages = {},
+  numpages = {},
+  year = {2017},
+  month = {},
+  publisher = {},
+  doi = {}
+}
+
 
 @ARTICLE{ScoX1CrossCorr2015arXiv,
 author = "Whelan, J.T. and Sundaresan, S. and Zhang, Y. and Peiris, P.",
@@ -3539,4 +3574,43 @@ doi = "10.1103/PhysRevD.89.043001"
     volume = "32",
     pages = "115012",
     year = "2015"
+}
+
+@ARTICLE{O1Sideband2017,
+    author = "Abbott, B.P. and others",
+    title = "Search for gravitational waves from {S}corpius {X-1} in the first {A}dvanced {LIGO} observing run with a hidden {M}arkov model",
+    journal = "{P}hys {R}ev {D}",
+    volume = "95",
+    pages = "12200",
+    year = 2017
+    doi = {10.1103/PhysRevD.95.122003}
+}
+
+@ARTICLE{SidebandMarkovModelSuvorova2016,
+    author = "Suvorova, S. and Sun, L. and Melatos, A. and Moran, W. and Evans, R.J.",
+    title = "Hidden {M}arkov model tracking of continuous gravitational waves from a neutron star with wandering spin",
+    journal = "{P}hys {R}ev {D}",
+    volume = "93",
+    pages = "123009",
+    year = "2016",
+    doi = "10.1103/PhysRevD.93.123009"
+}
+
+@ARTICLE{SidebandBessel2017,
+    author = "Clearwater, P. and Melatos, A. and Sun, L." ,
+    title = "Hidden {M}arkov model tracking of continuous gravitational waves from a binary neutron star with wandering spin. {II.} {B}inary orbital phase tracking"
+    journal = {LIGO DCC},
+    year = 2017,
+    volume = "P1700040" 
+}
+
+
+@ARTICLE{O1Radiometer2017,
+    author = "Abbott, B.P. and others",
+    title = "Directional limits on persistent gravitational waves from {A}dvanced {LIGO}'s first observing run",
+    journal = "{P}hys {R}ev {Lett}",
+    volume = "118",
+    pages = "121102",
+    year = 2017,
+    doi = "10.1103/PhysRevLett.118.121102"
 }
