A new entry for the hierarchical paper

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2739,6 +2739,15 @@ volume = "57",
 pages = "2101"
 }
 
+@ARTICLE{HierarchicalBrady2000,
+  author = "Brady, P.R. and Creighton, T.",
+  title = "Searching for periodic sources with {LIGO.} {II.} {H}ierarchical searches",
+  journal = "{P}hys. {R}ev. {D}",
+  year = "2000",
+  volume = "61",
+  pages = "082001"
+}
+
 @ARTICLE{Zimmermann1979,
 author = "Zimmermann, M. and Szedenits, Jr, E.",
 title = "Gravitational waves from rotating and precessing rigid bodies: simple models and applications to pulsars",
