--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3154,7 +3154,7 @@ year = "2001"
 
 @ARTICLE{MeadorsDirectedMethods2016,
     author = "Meadors, G.D. and Goetz, E. and Riles, K.",
-    title = "Tuning into Scorpius X-1: adapting a continuous gravitational-wave search for a known binary system",
+    title = "Tuning into {S}corpius {X-1}: adapting a continuous gravitational-wave search for a known binary system",
     journal ="Class. {Q}uant. {G}rav.",
     year = 2016,
     volume = "33",
